--- a/jgrapht-core/pom.xml
+++ b/jgrapht-core/pom.xml
@@ -47,7 +47,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
 				<configuration>
 					<archive>
 						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
@@ -64,14 +63,24 @@
 							<excludes>
 								<exclude>**/perf/**</exclude>
 							</excludes>
+							<excludedGroups>org.jgrapht.SlowTests</excludedGroups>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-failsafe-plugin</artifactId>
+		        <configuration>
+		        	<includes>
+						<include>**/*Test.java</include>
+					</includes>
+	        		<groups>org.jgrapht.SlowTests</groups>
+	        	</configuration>
+      		</plugin>
+			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>3.5.0</version>
 				<executions>
 					<execution>
 						<phase>process-classes</phase>
