--- a/jgrapht-demo/pom.xml
+++ b/jgrapht-demo/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jgrapht</groupId>
 		<artifactId>jgrapht</artifactId>
-		<version>1.2.0</version>
+		<version>1.2.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>jgrapht-demo</artifactId>
 	<name>JGraphT - Demo</name>
