--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,20 @@
 language: java
 jdk:
   - oraclejdk8
+node_js:
+  - "node"
+before_install:
+  - npm install -g hercule
 script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V && mvn verify -B && mvn javadoc:aggregate && mvn checkstyle:check -P checkstyle
+  - hercule docs/guide-templates/test.md -o docs/guide/CompleteGraphDemo.md
 after_success:
   - test $TRAVIS_BRANCH = "master" && mvn deploy -DskipTests=true --settings etc/snapshot-settings.xml
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  local-dir: docs
+  on:
+    branch: master
