--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,7 @@ before_install:
   - npm install -g hercule
 script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V && mvn verify -B && mvn javadoc:aggregate && mvn checkstyle:check -P checkstyle
-  - etc/expandMarkdown.sh
-  - rm -f docs/guide/.gitignore
-  - etc/downloadJavadoc.sh
-  - mv target/site/apidocs docs/javadoc-SNAPSHOT
+  - test $TRAVIS_BRANCH = "master" && etc/prepareDocs.sh
 after_success:
   - test $TRAVIS_BRANCH = "master" && mvn deploy -DskipTests=true --settings etc/snapshot-settings.xml
 deploy:
