--- a/jgrapht-bundle/pom.xml
+++ b/jgrapht-bundle/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.2.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>jgrapht-bundle</artifactId>
-	<name>JGraphT - Bundle Jar</name>
+	<name>JGraphT - Bundle</name>
 	<properties>
 		<main.basedir>${project.parent.basedir}</main.basedir>
 	</properties>
