--- a/jgrapht-bundle/pom.xml
+++ b/jgrapht-bundle/pom.xml
@@ -70,6 +70,14 @@
 				<configuration>
 					<transformers>
 						<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+							<resource>META-INF/license-EPL</resource>
+							<file>${main.basedir}/license-EPL.txt</file>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+							<resource>META-INF/license-LGPL</resource>
+							<file>${main.basedir}/license-LGPL.txt</file>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
 							<resource>META-INF/jheaps-license</resource>
 							<file>${main.basedir}/etc/licenses/apache-license-2.0.txt</file>
 						</transformer>
