--- a/jgrapht-io/pom.xml
+++ b/jgrapht-io/pom.xml
@@ -153,12 +153,12 @@
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4-runtime</artifactId>
-			<version>4.7</version>
+			<version>4.7.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.5</version>
+			<artifactId>commons-text</artifactId>
+			<version>1.5</version>
 		</dependency>
 	</dependencies>
 </project>
