--- a/jgrapht-guava/pom.xml
+++ b/jgrapht-guava/pom.xml
@@ -88,6 +88,10 @@
                         <groupId>org.checkerframework</groupId>
                         <artifactId>checker-compat-qual</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.checkerframework</groupId>
+                        <artifactId>checker-qual</artifactId>
+                    </exclusion>
       		</exclusions>
         </dependency>
 		<dependency>
