--- a/jgrapht-bundle/pom.xml
+++ b/jgrapht-bundle/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jgrapht</groupId>
 		<artifactId>jgrapht</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
+		<version>1.3.0</version>
 	</parent>
 	<artifactId>jgrapht-bundle</artifactId>
 	<name>JGraphT - Bundle</name>
@@ -112,7 +112,7 @@
                 		</transformer>
 					</transformers>
 					<shadedArtifactAttached>false</shadedArtifactAttached>
-					<shadedClassifierName></shadedClassifierName>
+					<shadedClassifierName />
 				</configuration>
 			</plugin>
 			<plugin>
