--- a/jgrapht-ext/pom.xml
+++ b/jgrapht-ext/pom.xml
@@ -64,9 +64,9 @@
 			<artifactId>jgrapht-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.tinyjee.jgraphx</groupId>
+			<groupId>com.github.vlsi.mxgraph</groupId>
 			<artifactId>jgraphx</artifactId>
-			<version>3.4.1.3</version>
+			<version>3.9.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
