moving SerializationTestUtils from jgrapht-guava to jgrapht-core (#779)
* change existing SerializationTest to use SerializationTestUtils
* change existing guava tests to use SerializationTestUtils

--- a/jgrapht-guava/pom.xml
+++ b/jgrapht-guava/pom.xml
@@ -99,5 +99,11 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>jgrapht-core</artifactId>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
