--- a/jgrapht-opt/pom.xml
+++ b/jgrapht-opt/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jgrapht</groupId>
 		<artifactId>jgrapht</artifactId>
-		<version>1.4.0</version>
+		<version>1.4.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>jgrapht-opt</artifactId>
 	<name>JGraphT - Optimized Graphs</name>
