--- a/jgrapht-io/pom.xml
+++ b/jgrapht-io/pom.xml
@@ -153,12 +153,12 @@
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4-runtime</artifactId>
-			<version>4.7.2</version>
+			<version>4.8-1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-text</artifactId>
-			<version>1.6</version>
+			<version>1.8</version>
 		</dependency>
 	</dependencies>
 </project>
