--- a/pom.xml
+++ b/pom.xml
@@ -114,13 +114,13 @@
 			<dependency>
 			    <groupId>org.xmlunit</groupId>
 			    <artifactId>xmlunit-core</artifactId>
-			    <version>2.6.2</version>
+			    <version>2.6.3</version>
 			    <scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.12</version>
+				<version>4.13</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
@@ -132,10 +132,9 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.1</version>
+					<version>3.8.1</version>
 					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
+						<release>11</release>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -153,7 +152,7 @@
   						<dependency>
    							<groupId>org.apache.maven.surefire</groupId>
    							<artifactId>surefire-junit47</artifactId>
-   							<version>2.22.2</version>
+   							<version>3.0.0-M4</version>
   						</dependency>
  					</dependencies>
 					<executions>
@@ -213,7 +212,7 @@
 						<windowtitle>JGraphT : a free Java graph library</windowtitle>
 						<additionalJOption>--allow-script-in-comments</additionalJOption>
 						<doclint>none</doclint>
-						<source>8</source>
+						<source>11</source>
 						<header>&lt;script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML,https://jgrapht.org/mathjax/mathjaxConfig.js"&gt;&lt;/script&gt;
                                                 &lt;img src="https://github.com/jgrapht/jgrapht/blob/master/etc/logo/jgrapht-logo-transparent-cropped-javadocheader.png?raw=true" style="height:55px;"&gt;
                                                 </header>
