--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,7 @@
                                                 <doctitle>${project.name} ${project.version} API
                                                 &lt;img src="https://github.com/jgrapht/jgrapht/blob/master/etc/logo/jgrapht-logo-transparent-cropped.png?raw=true" style="height:100px;float:right" &gt;    
                                                 </doctitle>
+						<detectJavaApiLink>false</detectJavaApiLink> <!-- Temporary fix for https://stackoverflow.com/questions/58836862/jdk-11-and-javadoc -->
 					</configuration>
 				</plugin>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
