--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
 				<version>4.13</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>jakarta.xml.bind</groupId>
+				<artifactId>jakarta.xml.bind-api</artifactId>
+				<version>2.3.3</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
